ahora anda con tokens ...

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 TAIGA_BASE_URL=YOUR_TAIGA_URL_HERE/api/v1
+# Opción 1: Usar token de API (recomendado)
+TAIGA_AUTH_TOKEN=YOUR_API_TOKEN_HERE
+# Opción 2: Usar usuario/contraseña (alternativo)
 TAIGA_USERNAME=YOUR_USERNAME_HERE
 TAIGA_PASSWORD=YOUR_PASSWORD_HERE
 TAIGA_TOKEN_TTL=82800
