--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-TAIGA_BASE_URL=YOUR_TAIGA_URL_HERE/api/v1
-# Opción 1: Usar token de API (recomendado)
-TAIGA_AUTH_TOKEN=YOUR_API_TOKEN_HERE
-# Opción 2: Usar usuario/contraseña (alternativo)
-TAIGA_USERNAME=YOUR_USERNAME_HERE
-TAIGA_PASSWORD=YOUR_PASSWORD_HERE
+TAIGA_BASE_URL=https://your-taiga-instance.com/api/v1/
+# Opción 1: Usar token de sesión del navegador (recomendado)
+TAIGA_AUTH_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.example_token_here
+# Opción 2: Usar usuario/contraseña (puede no funcionar en algunas instancias)
+# TAIGA_USERNAME=your_username
+# TAIGA_PASSWORD=your_password
 TAIGA_TOKEN_TTL=82800
 UVICORN_HOST=0.0.0.0
 UVICORN_PORT=8000
