--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ disable = [
     "missing-docstring",
     "too-few-public-methods",
     "import-error",
+    "invalid-name",
 ]
 
 [tool.pylint.format]
@@ -104,3 +105,6 @@ strict_equality = true
 [[tool.mypy.overrides]]
 module = "tests.*"
 disallow_untyped_defs = false
+
+[project.scripts]
+dev = "app.__main__:main"
