--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ build/
 
 # uv
 .uv/
+
+# Documentación de proyecto (contenido privado del autor)
+util/llm-docs-proyect/*
+!util/llm-docs-proyect/.gitkeep
