--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,18 @@
+# Taiga API Configuration
 TAIGA_BASE_URL=https://your-taiga-instance.com/api/v1/
-# Opción 1: Usar token de sesión del navegador (recomendado)
-TAIGA_AUTH_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.example_token_here
-# Opción 2: Usar usuario/contraseña (puede no funcionar en algunas instancias)
-# TAIGA_USERNAME=your_username
-# TAIGA_PASSWORD=your_password
+
+# Token Configuration
+# Token is now set via POST /auth endpoint (not stored in .env)
+# Use GET /auth to check token status and get instructions
 TAIGA_TOKEN_TTL=82800
+
+# Database Configuration (optional, defaults to SQLite)
+# DATABASE_URL=sqlite+aiosqlite:///./taiga_sync.db
+# For PostgreSQL: DATABASE_URL=postgresql+psycopg://user:pass@localhost/dbname
+
+# Server Configuration
 UVICORN_HOST=0.0.0.0
 UVICORN_PORT=8000
+
+# Debug (optional)
+# SQL_ECHO=true
