--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pydantic>=2.6.1",
     "fastapi-mcp>=0.4.0",
+    "dotenv>=0.9.9",
+    "sqlalchemy[asyncio]>=2.0.25",
+    "aiosqlite>=0.19.0",
+    "alembic>=1.13.0",
+    "jinja2>=3.1.2",
+    "psycopg[binary]>=3.1.0",
 ]
 
 [project.optional-dependencies]
