--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "sqlalchemy[asyncio]>=2.0.25",
     "aiosqlite>=0.19.0",
+    "asyncpg>=0.29.0",
     "alembic>=1.13.0",
     "jinja2>=3.1.2",
     "psycopg[binary]>=3.1.0",
